crates/frontend/samples/test11.fir
`

mod a {
    whee
}

mod b {
    pub
}

mod c {
    fn whee<
    
    ;
}

mod d {
    pub trait Whee
}

mod e {
    pub struct Whee<> {
        foo { pub foo: u32, bar },
    }
}

mod f {
    pub whee

    pub fn whee()
}

mod g {
    fn whee<Foo:
    
    ;
}

mod h {
    fn whee() {
        let foo = 1;

        $
    }

    fn woo() {
        let foo = 1

        $
    }
}
